# monoscope

./: .dockerignore  .editorconfig  .env  .env.example  .ghci  .ghcid  .gitignore  .gitpod.dockerfile  .gitpod.yml  .hlint.yaml  .prettierrc  .prettierrc.yaml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  DEVELOPMENT.md  DOCKER_COMPOSE_README.md  Dockerfile  Dockerfile.deps  Dockerfile.local  LICENSE  Makefile  PG_EFFECT_MIGRATION.md  PLAN.md  PRODUCT.md  README.md  ROADMAP.md  Setup.hs  TODO.md  apitoolkit-server.cabal  apitoolkit-server.cabal.2  auto-instrument-config.toml  cabal.project  cabal.project.freeze  compile_protos.sh  cypress.config.js  dashboard_redesign_plan.md  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  (+19 more)
.githooks/: pre-commit
.github/: dependabot.yml
.impeccable/: design.json
app/: Devel.hs  Main.hs
bench/: bench-ingest.sh
cli/: Main.hs
config/: tailwind.config.js  weeder.toml  workbox-config.js
docs/: DEVELOPMENT.md  DOCKER_COMPOSE_README.md  PRD-team-based-alerting.md  alerts.md  anomaly-detection-system.md  anomaly-detection-testing-guide.md  anomaly-detection-triggers.sql  architecture.md  cli.md  configuration.md  email-sequence.md  getting-started.md  kql-reference.md  kubernetes.md  mcp.md  refactor-phase1-conciseness.md  refactor-phase2-control-flow.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
hpack-includes/: lib-deps.yaml
rust-interop/: Cargo.toml  Setup.hs  Setup.lhs  hsbindgen.toml  rust-interop.cabal
rust-interop/src/: RustInterop.hs  lib.rs
src/: Lib.hs  (+16 more)
(+885 files in other folders)
