
[package]
name = "rust-interop"
version = "0.1.0"
edition = "2021"

[dependencies]
hs-bindgen = { version = "0.9.0", features = ["full"] }
# testkit = {path = "../../testkit/"}
testkit = {version="0.2.2"}
tokio = { version = "1.29.1", features = ["full"] }
serde = {version="1.0" }
serde_json = "1.0"

[lib]
crate-type = ["staticlib", "cdylib"]
